--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marcho</title>
-  <!-- 
+   
   <link
     rel="stylesheet"
     type="text/css"
@@ -16,8 +16,8 @@
     href="/fancybox/jquery.fancybox-1.3.4.css"
     type="text/css"
     media="screen"
-  /> -->
-  <link rel="stylesheet" href="/css/style.min.css" />
+  /> 
+  <link rel="stylesheet" href="./css/style.min.css" />
 </head>
 
 
