--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
     type="text/css"
     media="screen"
   /> -->
-  <link rel="stylesheet" href="/css/style.min.css" />
+  <link rel="stylesheet" href="./css/style.min.css" />
 </head>
 
 
