--- a/page.html
+++ b/page.html
@@ -30,13 +30,13 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--active" href="#">home</a>
+            <a class="menu__list-link" href="#">home</a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">shop</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">page</a>
+            <a class="menu__list-link menu__list-link--active" href="#">page</a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">blog</a>
