--- a/register.html
+++ b/register.html
@@ -30,19 +30,19 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--active" href="#">home</a>
+            <a class="menu__list-link" href="./index.html">home</a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">shop</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">page</a>
+            <a class="menu__list-link" href="./page.html">page</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">blog</a>
+            <a class="menu__list-link menu__list-link--active" href="./register.html">blog</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">contact</a>
+            <a class="menu__list-link" href="./register.html">contact</a>
           </li>
         </ul>
       </nav>
