fixed bags with navbar

--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marcho</title>
-  <!-- 
+  <!--
   <link
     rel="stylesheet"
     type="text/css"
@@ -273,10 +273,34 @@
 
             <div class="product-tabs__content">
               <div class="product-tabs__content-item" id="tab-1">
-                content 1
+                <h2>Описание товара</h2>
+                <p>Этот продукт изготовлен из высококачественных материалов и разработан с учетом новейших технологий. Он отличается прочностью, долговечностью и стильным дизайном.</p>
+                <ul>
+                  <li>Материал: 100% хлопок</li>
+                  <li>Цвет: черный</li>
+                  <li>Размер: универсальный</li>
+                </ul>
               </div>
               <div class="product-tabs__content-item" id="tab-2">
-                content 2
+                <h2>Характеристики</h2>
+                <table class="product-specs">
+                  <tr>
+                    <th>Материал</th>
+                    <td>100% хлопок</td>
+                  </tr>
+                  <tr>
+                    <th>Цвет</th>
+                    <td>Черный</td>
+                  </tr>
+                  <tr>
+                    <th>Размер</th>
+                    <td>Универсальный</td>
+                  </tr>
+                  <tr>
+                    <th>Страна производства</th>
+                    <td>Италия</td>
+                  </tr>
+                </table>
               </div>
               <div class="product-tabs__content-item product-tabs__content-item--active" id="tab-3">
                 <div class="comments">
