--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marcho</title>
-  <!-- 
+  <!--
   <link
     rel="stylesheet"
     type="text/css"
@@ -33,7 +33,7 @@
             <a class="menu__list-link" href="./index.html">home</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">shop</a>
+            <a class="menu__list-link" href="./shop.html">shop</a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="./page.html">page</a>
@@ -91,7 +91,7 @@
       <section class="modal">
         <div class="container">
           <div class="modal__links">
-            <a class="modal__link" href="#">register</a>
+            <a class="modal__link" href="./register.html">register</a>
             <a class="modal__link modal__link--active" href="#">login</a>
           </div>
           <form class="modal__form" action="#">
