--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marcho</title>
-  <!-- 
+  <!--
   <link
     rel="stylesheet"
     type="text/css"
@@ -34,7 +34,7 @@
             <a class="menu__list-link" href="./index.html">home</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--active" href="#">shop</a>
+            <a class="menu__list-link menu__list-link--active" href="./shop.html">shop</a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="./page.html">page</a>
